# time-manager-cli

./: .gitignore  Cargo.toml  Makefile.toml
src/: consts.rs  error.rs  get_access_token.rs  lib.rs  overwrite_refresh_token.rs  request_body.rs  sample_secret.rs  types.rs
src/consts/: urls.rs
src/types/: methods.rs  payload.rs  working_info.rs
