[package]
name = "time-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
derive-getters = "0.2.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
stdext = "0.3.1"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-test = "0.2.3"
typed-builder = "0.11.0"
